--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Industrial Data Analytics Lab
+title: AAAAAA
 description: Industrial Data Analytics Lab
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Industrial Data Analytics Lab
+username: AAAA
 user_description: 산업데이터 분석 연구실은 산업 현장의 데이터를 확보/분석을 통한 산학협력/컨설팅을 수행합니다. 
 user_title:
 email:
