--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ permalink:        pretty
 
 
 # Setup
-title:            '고광종'
-tagline:          'GwangJong Ko'
-description:      '설명을 써주세여'
-url:              "https://koptimizer.github.io"
+title:            'Hyungjoo Cha'
+tagline:          'Hyungjoo Cha'
+description:      '-'
+url:              "https://hjcha.github.io"
 baseurl:          ""
 
 author:
